<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/idTown3"
        android:layout_width="241dp"
        android:layout_height="42dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="44dp"
        android:text="@string/town2"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idButtonBack" />

    <TextView
        android:id="@+id/staticTown2"
        android:layout_width="163dp"
        android:layout_height="wrap_content"
        android:layout_gravity=""
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/editTown"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idButtonBack" />

    <TextView
        android:id="@+id/staticTown3"
        android:layout_width="163dp"
        android:layout_height="wrap_content"
        android:layout_gravity=""
        android:layout_marginTop="36dp"
        android:text="@string/showAddParameters"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.096"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idTown" />

    <TextView
        android:id="@+id/idTown"
        android:layout_width="241dp"
        android:layout_height="42dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/town1"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idTown3" />

    <Button
        android:id="@+id/idButtonBack"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:onClick="onClickBackMainActivity"
        android:text="@string/nameBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/windSpeed"
        android:layout_width="158dp"
        android:layout_height="34dp"
        android:layout_marginTop="16dp"
        android:text="@string/windSpeed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.094"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/staticTown3"
        app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/pressure"
        android:layout_width="158dp"
        android:layout_height="34dp"
        android:layout_marginBottom="304dp"
        android:text="@string/namePressure"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.094"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/windSpeed"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/nameEdit"
        android:onClick="onClickEditTown"
        app:layout_constraintStart_toEndOf="@+id/idTown3"
        app:layout_constraintTop_toTopOf="@+id/idTown3" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/nameEdit"
        android:onClick="onClickEditTown"
        app:layout_constraintStart_toEndOf="@+id/idTown"
        app:layout_constraintTop_toTopOf="@+id/idTown" />


</androidx.constraintlayout.widget.ConstraintLayout>