<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/idButtonStartCustomization"
                android:layout_weight="1"
                android:layout_height="50dp"
                android:text="@string/nameCustomization"
                android:layout_marginLeft="10dp"
                android:layout_width="50dp">

            </Button>

            <Switch
                android:id="@+id/idBlackTheme"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_gravity="end"
                android:textSize="15sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/staticTown"
            android:layout_width="163dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/nameWeather"
            android:textSize="15sp" />

            <LinearLayout android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/idTown1"
                    android:layout_width="241dp"
                    android:layout_height="42dp"
                    android:layout_marginStart="20sp"
                    android:layout_marginTop="15dp"
                    android:text="@string/town1"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:layout_marginLeft="20sp" />

                <TextView
                    android:id="@+id/idTemp1"
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/temp1"
                    android:textSize="25sp"
                    android:textStyle="bold" />


            </LinearLayout>

        <LinearLayout android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/idNameWindSpeed1"
                android:layout_width="232dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginLeft="20sp"
                android:layout_marginTop="0dp"
                android:text="@string/windSpeed"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/idWindSpeed1"
                android:layout_width="42dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="0dp"
                android:text="@string/valueWindSpeed"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/idNamePressure1"
                android:layout_width="232dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginLeft="20sp"
                android:layout_marginTop="1dp"
                android:text="@string/namePressure"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/idPressure1"
                android:layout_width="42dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="1dp"
                android:text="@string/valuePressure"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/idTown2"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:text="@string/town2"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/idTemp2"
                android:layout_width="82dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:text="@string/temp2"
                android:textSize="25sp"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/idNameWindSpeed2"
                android:layout_width="232dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginLeft="20sp"
                android:layout_marginTop="0dp"
                android:text="@string/windSpeed"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/idWindSpeed2"
                android:layout_width="42dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="0dp"
                android:text="@string/valueWindSpeed"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/idNamePressure2"
                android:layout_width="232dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginLeft="20sp"
                android:layout_marginTop="1dp"
                android:text="@string/namePressure"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/idPressure2"
                android:layout_width="42dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="1dp"
                android:text="@string/valuePressure"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/InterestingWeather"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/textWeather"
            android:textSize="25sp"
            />

    </LinearLayout>

</ScrollView>