<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/idNameWindSpeed1"
                android:layout_width="232dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginLeft="20sp"
                android:layout_marginTop="0dp"
                android:text="@string/windSpeed"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/idWindSpeed1"
                android:layout_width="42dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="0dp"
                android:text="@string/valueWindSpeed"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/idNamePressure1"
            android:layout_width="232dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="1dp"
            android:text="@string/namePressure"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/idPressure1"
            android:layout_width="42dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="1dp"
            android:text="@string/valuePressure"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>

    </LinearLayout>
